...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Recipe Deck'),
        actions: [
          IconButton(
            key: const Key('openRecipeUrlImportButton'),
            tooltip: 'Import Recipe URL',
            onPressed: _importRecipeUrl,
            icon: const Icon(Icons.link),
          ),
        ],
      ),
...
